<resources>
    <string name="app_name">Btc Heyue</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="no_data">暂无数据</string>
    <string name="login_invalid">登录失效，请重新登录！</string>
    <string name="submit">提交</string>
    <string name="exit_again">再按一次退出</string>
    <string name="name">姓名</string>
    <string name="new_pwd">新密码</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="success">成功</string>
    <string name="savesuccess">保存成功</string>
    <string name="download_tag">开始下载...请稍候</string>
    <string name="more">更多</string>
    <string name="index">指标</string>
    <string name="hide">隐藏</string>
    <string name="main">主图</string>
    <string name="child">副图</string>
    <string name="delete">删除</string>
    <string name="users_login">用户登录</string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="phone">400000000</string>
    <string name="web">https://www.caymanex.pro</string>
    <string name="str_payway_ali">支付宝</string>
    <string name="str_payway_wechat">微信</string>
    <string name="str_payway_union">银联</string>
    <string name="edit_decimals_tag">您输入的小数已超过限定位数</string>
    <string name="pub_ads_confirm">广告创建成功，需要手动上架，是否上架？</string>
    <string name="pub_ads_up">广告创建成功，请点击上架完成发布</string>
    <string name="no_input_emoji">不支持输入表情</string>
    <string name="str_no_order">暂无订单&#8230;</string>
    <string name="please_enter_the">请输入</string>
    <string name="gains">涨幅</string>
    <string name="quote_change">涨跌幅</string>
    <string name="buy_coins">买币</string>
    <string name="sell_coins">卖币</string>
    <string name="bind_account">请先绑定收款账户</string>
    <string name="str_try_refresh">点我刷新</string>
    <string name="str_get_exchange_info">获取盘口数据</string>
    <string name="egional_selection">地区选择</string>
    <string name="message_details">消息详情</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">当前无网络</string>
    <string name="parse_error">数据异常</string>
    <string name="camera_permission">权限不可用，请开启相机权限</string>
    <string name="storage_permission">权限不可用，请开启存储权限</string>
    <string name="password_realname">请先设置资金密码和实名认证</string>
    <string name="binding_phone_first">请先绑定手机号</string>
    <string name="realname_first">请先实名认证</string>
    <string name="realname">实名已认证</string>
    <string name="phone_over">手机已认证</string>
    <string name="email_over">邮箱已认证</string>
    <string name="realname_no">实名未认证</string>
    <string name="phone_over_no">手机未认证</string>
    <string name="email_over_no">邮箱未认证</string>
    <string name="library_file_exception">图库文件返回异常</string>
    <string name="incomplete_information">填写信息不完整</string>
    <string name="empty_address">数据有误，地址为空</string>
    <string name="order_details_failed">订单详情获取失败,正在重新获取</string>
    <string name="no_qrcode">未设置二维码地址</string>
    <string name="no_ads">广告信息获取失败，正在重新获取！</string>
    <string name="login_tag">登录出现异常，请重新登录</string>
    <string name="socket_time">链接超时，请检查网络！</string>
    <string name="request_error">请求出错！</string>
    <string name="nationality">国籍</string>
    <string name="china">中国</string>
    <string name="start_bind">开始绑定</string>
    <string name="change_phone_num">修改手机号</string>
    <string name="new_phone_num">新手机号码</string>
    <string name="change_bind_phone_num">修改绑定手机号</string>
    <string name="change_bind_phone">保存修改</string>
    <string name="change_bind_phone_num_tag">您正在修改账户绑定的手机号，请进行身份认证</string>
    <string name="receive_phone_code">原手机能接受验证码</string>
    <string name="unreceive_phone_code">原手机不能接受验证码</string>
    <string name="unreceive_phone_code_tag">提示：如您的原手机号无法接收验证码，请联系平台客服进行修改解决！</string>
    <string name="zjmm_phone_code_tag">提示：您正在修改Cayman交易密码，为了您的资金安全，密码修改后24小时内不允许提币！</string>
    <string name="modifm_name_tag">昵称只可以修改一次，保存后无法再次修改！昵称长度不可超过16位，不允许输入空格等特殊符号！</string>
    <string name="handset_tail_number">手机尾号</string>
    <string name="receive_message_code">接收到的短信验证码</string>
    <string name="captcha">验证码</string>
    <string name="reset_pwd_desc1">验证码已发送至\n尾号%s的手机</string>
    <string name="reset_pwd_desc2">请重新设置登录密码\n密码至少八位，包含数字和字母</string>
    <string name="change_login_pwd">更改登录密码</string>
    <string name="change_login_pwd_tag">您正在修改登录密码</string>
    <string name="change_login_pwd_bind_phone_tag">您已经绑定手机号</string>
    <string name="change_login_pwd_success_tag">修改成功请重新登录</string>
    <string name="old_login_pwd">旧登录密码</string>
    <string name="new_login_pwd">新登录密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="set_money_pwd">设置资金密码</string>
    <string name="set_money_pwd_tag">您正在修改资金密码</string>
    <string name="change_money_pwd">修改资金密码</string>
    <string name="reset_money_pwd_tag">您正在重置资金密码</string>
    <string name="old_money_pwd">旧资金密码</string>
    <string name="new_money_pwd">新资金密码</string>
    <string name="confirm_money_pwd">确认资金密码</string>
    <string name="id_card_num">身份证号码</string>
    <string name="str_image_face_id_card">身份证正面照</string>
    <string name="str_image_back_id_card">身份证反面照</string>
    <string name="str_image_hold_id_card">手持身份证\n正面照</string>
    <string name="upload_success">上传成功</string>
    <string name="idcard_diff">身份证号格式不正确</string>
    <string name="home">首页</string>
    <string name="market">行情</string>
    <string name="heyue">合约</string>
    <string name="exchange">交易</string>
    <string name="account">我的</string>
    <string name="treasure">挖宝</string>
    <string name="performer_home">涨幅榜</string>
    <string name="heyuedasai">合约大赛</string>
    <string name="xinshouzhinan">新手指南</string>
    <string name="xinrenlingjiang">新人领奖</string>
    <string name="chongbi">充币</string>
    <string name="wdcc">我的持仓</string>
    <string name="yqhy">邀请好友</string>
    <string name="ptfwrs">平台服务人数</string>
    <string name="hydl">欢迎登陆</string>
    <string name="bjzl">编辑资料</string>
    <string name="zjzh">资金账户</string>
    <string name="hyqczh">合约全仓账户</string>
    <string name="not_login">未登录</string>
    <string name="welcome_to">欢迎来到Cayman</string>
    <string name="my_zhuanr">转入</string>
    <string name="my_zhuanc">转出</string>
    <string name="my_huaz">资金划转</string>
    <string name="my_ads">我的广告</string>
    <string name="my_message">消息中心</string>
    <string name="my_entrust">我的委托</string>
    <string name="my_promotion">我的推广</string>
    <string name="invite_friends">邀请好友</string>
    <string name="invite_money">邀请返佣</string>
    <string name="my_wdzj">我的赠金</string>
    <string name="my_fxjl">分享奖励</string>
    <string name="my_sfrz">身份认证</string>
    <string name="my_aqzx">安全中心</string>
    <string name="my_cwsj">成为商家</string>
    <string name="my_bzzx">帮助中心</string>
    <string name="my_sz">设置</string>
    <string name="my_credit">身份认证</string>
    <string name="my_safe">安全中心</string>
    <string name="my_version">版本更新</string>
    <string name="my_setting">设置中心</string>
    <string name="my_kefu">联系客服</string>
    <string name="balance">总资产(USDT)</string>
    <string name="mybalance">我的资产(USDT)</string>
    <string name="confirm_logout">您确定要退出登录？</string>
    <string name="logout_current_account">退出账号</string>
    <string name="login_after">登录后可查看</string>
    <string name="mytotalassets">%.2f USDT</string>
    <string name="mytotalassetsconverts"> ≈ %.2f CNY</string>
    <string name="promote_friends">推广好友</string>
    <string name="my_commission">我的佣金</string>
    <string name="get_rebate">获得返佣：</string>
    <string name="number_invitees">邀请人数</string>
    <string name="people">人</string>
    <string name="register_time">注册时间</string>
    <string name="recommendation_level">推荐级别</string>
    <string name="release_time">发放时间</string>
    <string name="currency">币种</string>
    <string name="remarks">备注</string>
    <string name="invite">赶快邀请您的好友来赚钱吧！</string>
    <string name="reward_invitation">Cayman 奖励邀请</string>
    <string name="reward_invita">邀请您加入Cayman, 长按识别扫码下载app</string>
    <string name="invite_tag">邀请好友，赚取佣金\n和朋友一起赚钱</string>
    <string name="promotion_link">专属推广链接:</string>
    <string name="level_one">一级</string>
    <string name="level_two">二级</string>
    <string name="level_three">三级</string>
    <string name="level_four">四级</string>
    <string name="rule_description">《规则说明》</string>
    <string name="order_appeal">订单申诉</string>
    <string name="appeal_tag">我们会尽快处理你的申诉请求，请耐心等待</string>
    <string name="appeal_type">申诉类型：</string>
    <string name="appeal_description">申诉说明：</string>
    <string name="appeal_image">申诉图片：</string>
    <string name="appeal_reason">请简要描述您申诉的原因（300字以内）</string>
    <string name="appeal_rea">请在这里提出您的意见和建议！</string>
    <string name="chat">正在聊天</string>
    <string name="send_chat">发送</string>
    <string name="recently">刚刚</string>
    <string name="chat_list">聊天列表</string>
    <string name="chat_tag">请输入发送内容</string>
    <string name="latest_price">最新价：</string>
    <string name="item_buy">买</string>
    <string name="item_sell">卖</string>
    <string name="history">历史</string>
    <string name="current_trust">当前委托</string>
    <string name="oneclick_liquidation">一键平仓</string>
    <string name="history_record">历史记录</string>
    <string name="history_trust">历史委托</string>
    <string name="now_trust">当前委托</string>
    <string name="undone">已撤销</string>
    <string name="deal">已成交</string>
    <string name="trading">交易中</string>
    <string name="trust_detail">交易明细</string>
    <string name="item_time">时间</string>
    <string name="item_cost">成交价</string>
    <string name="item_number">委托量</string>
    <string name="item_charge">手续费</string>
    <string name="all">全部</string>
    <string name="all_buy">全部买入</string>
    <string name="all_sell">全部卖出</string>
    <string name="text_buy_in">做多</string>
    <string name="text_buy">购买</string>
    <string name="text_domore">做多</string>
    <string name="text_doless">做空</string>
    <string name="text_sale_out">做空</string>
    <string name="text_price">价格</string>
    <string name="text_number">数量</string>
    <string name="text_entrust">委托额</string>
    <string name="text_login_first">请先登录</string>
    <string name="text_dish">盘口</string>
    <string name="text_click_login">暂无登录,点击登录</string>
    <string name="text_entity">暂无数据&#8230;</string>
    <string name="order_entity">目前还没有委托订单哦</string>
    <string name="text_enter_price">请输入价格</string>
    <string name="text_best_price">以市场最优价格</string>
    <string name="text_best_sale">以市场最优价格</string>
    <string name="text_best_prices">最优价格</string>
    <string name="text_can_used">可用</string>
    <string name="text_can_sell">可卖</string>
    <string name="text_sell">出售</string>
    <string name="text_volume">成交量</string>
    <string name="text_average_price">成交均价</string>
    <string name="text_entrust_num">委托量</string>
    <string name="text_money_pwd">资金密码</string>
    <string name="amount">数量</string>
    <string name="poundage">手续费</string>
    <string name="mention_money_address">提币地址</string>
    <string name="enter_address_tag">请输入或选择地址</string>
    <string name="mention_account">提币数量</string>
    <string name="select">选择</string>
    <string name="regist">注册</string>
    <string name="password">密码</string>
    <string name="sign_up">注册</string>
    <string name="email_sign_up">邮箱注册</string>
    <string name="phone_sign_up">手机号注册</string>
    <string name="phoneoremail">手机号码或者邮箱</string>
    <string name="phone_number">手机号码</string>
    <string name="send_code">获取验证码</string>
    <string name="phone_code">请输入短信验证码</string>
    <string name="repeat_password">确认密码</string>
    <string name="code">请输入短信验证码</string>
    <string name="promotion_code">邀请码</string>
    <string name="read_agree">我已阅读并同意 Cayman</string>
    <string name="user_agree">《用户使用协议》</string>
    <string name="existing_account">已有账号，去登录</string>
    <string name="goto_login">去登录</string>
    <string name="email">邮箱</string>
    <string name="user_name">用户名</string>
</resources>