<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <!--标题-->
    <include layout="@layout/view_head" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/change_login_pwd_tag"
        android:textColor="@color/sec_font_grey" />


    <LinearLayout style="@style/layout_my_info">

        <TextView
            style="@style/textview_tag"
            android:minWidth="100dp"
            android:text="@string/old_login_pwd" />

        <EditText
            android:id="@+id/etOldPwd"
            style="@style/edittext_normal"
            android:hint="@string/old_login_pwd"
            android:inputType="textPassword" />

    </LinearLayout>

    <View style="@style/line_bg_grey" />

    <LinearLayout style="@style/layout_my_info">

        <TextView
            style="@style/textview_tag"
            android:minWidth="100dp"
            android:text="@string/new_login_pwd" />

        <EditText
            android:id="@+id/etNewPwd"
            style="@style/edittext_normal"
            android:hint="@string/new_login_pwd"
            android:inputType="textPassword" />

    </LinearLayout>

    <View style="@style/line_bg_grey" />

    <LinearLayout style="@style/layout_my_info">

        <TextView
            style="@style/textview_tag"
            android:minWidth="100dp"
            android:text="@string/confirm_pwd" />

        <EditText
            android:id="@+id/etRepeatPwd"
            style="@style/edittext_normal"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword" />

    </LinearLayout>

    <View style="@style/line_bg_grey" />

    <LinearLayout style="@style/layout_my_info">

        <TextView
            style="@style/textview_tag"
            android:minWidth="100dp"
            android:text="@string/phone_code" />

        <EditText
            android:id="@+id/etCode"
            style="@style/edittext_normal"
            android:layout_weight="1"
            android:hint="@string/code"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvGetCode"
            style="@style/textveiw_msg_code"
            android:text="@string/send_code" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/change_login_pwd_bind_phone_tag"
        android:textColor="@color/sec_font_grey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvConfirm"
        style="@style/btn_option_normal"
        android:layout_height="50dp"
        android:text="@string/change_login_pwd" />

</LinearLayout>
