<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--标题-->
    <include layout="@layout/view_head" />

    <LinearLayout
        style="@style/layout_my_info"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/textview_tag"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tvPhone"
            style="@style/edittext_normal"
            android:gravity="right" />
    </LinearLayout>
    <View
        style="@style/line_bg_fens"></View>

    <LinearLayout style="@style/layout_my_info">

        <TextView
            style="@style/textview_tag"
            android:minWidth="90dp"
            android:text="@string/phone_code" />

        <EditText
            android:id="@+id/etCode"
            style="@style/edittext_normal"
            android:layout_weight="1"
            android:hint="@string/code"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvGetCode"
            style="@style/textveiw_msg_code"
            android:text="@string/send_code" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:background="#f6f8ff"
            android:layout_height="100dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="#42546a"
                android:textSize="14dp"
                android:lineSpacingExtra="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/unreceive_phone_code_tag"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvEdit"
        style="@style/btn_option_normal"
        android:layout_height="50dp"
        android:text="@string/change_phone_num" />

</LinearLayout>
